--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <i class="fa-solid fa-bars-staggered" style="color: #ffffff;"></i>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <i class="fa-solid fa-bars-staggered" style="color: #ffffff;"></i> -->
     <script src="https://kit.fontawesome.com/31678048ca.js" crossorigin="anonymous"></script>
     <title>Responsive Portfolio Website</title>
     <!-- Link to reset or normalize before main.css
@@ -21,42 +21,41 @@
     <h1 class="hidden">Leila-Akbari</h1>
     
         <header class="box" id="main-header">
-            <h1>HIIIIII</h1>
+            
             <div id="logo">
                 <img src="images/Akbari_Leila_Logo.svg" alt="Portfolio Logo">
             </div>
-            <nav class="nav-bar"><a href="/" class="navbar__logo"></a>
+            <!-- <nav class="nav-bar"><a href="#" class="navbar__logo"></a>
                 <div class="navbar__bars">
                     <i class="fas fa-bars"></i>
                 </div>
                 <div class="navbar__menu">
-                    <a href="/" class="navbar__menu--links">Home</a>
-                    <a href="/" class="navbar__menu--links">Projects</a>
-                    <a href="/" class="navbar__menu--links">Contact</a>
-                    <a href="/" class="navbar__menu--links">About</a>
+                    <a href="#" class="navbar__menu--links">Home</a>
+                    <a href="#" class="navbar__menu--links">Projects</a>
+                    <a href="#" class="navbar__menu--links">Contact</a>
+                    <a href="#" class="navbar__menu--links">About</a>
 
                 </div>
-            </nav>
+            </nav> -->
 
         </header>
 
         <main>
-            <div class="hero">
-                <div class="hero__container">
-                    <div class="hero__container--left">
-                        <h1 class="header">Hello! <br> I'm Leila Akbari</h1>
-                        <p>I’m a UI/UX designer based in London, Canada with 
-                            experience in delivering end-to-end UX/UI design for 
-                            software products. I’m passionate about improving the 
-                            lives of others through design and I am constantly 
-                            looking to learn new things every day.</p>
-                            <button class="hero__container--btn">
-                                <a href="#">More About Me</a>
-                            </button>
-                    </div>
-                    <div class="hero__container--right">
-                        <img src="images/HeroIMG-web.png" alt="hero-img" class="hero__container--img">
-                    </div>
+            <div class="box" id="Hero">
+                <div class="hero__container--left">
+                    <h1 class="header">Hello! <br> I'm Leila Akbari</h1>
+                    <p>I’m a UI/UX designer based in London, Canada with experience in <br> 
+                        delivering end-to-end UX/UI design for software products. <br>
+                        I’m passionate about improving the lives of others through design<br>
+                        and I am constantly looking to learn new things every day.<br>
+                        </p>
+                        <button class="hero__container--btn">
+                            <a href="#">More About Me</a>
+                        </button>
+                </div>
+                <div class="hero__container--right">
+                    <div class="container">Hero Image</div>
+                    <!-- <img src="images/HeroIMG-web.png" alt="hero-img" class="hero__container--img"> -->
                 </div>
             </div>
 
