--- a/index.html
+++ b/index.html
@@ -59,6 +59,48 @@
                 </div>
             </div>
 
+            <div class="box" id="Projects">
+                <div class="Project" id="Project1">
+                    <h1 class="Project-name">Kadot</h1>
+                    <p> Kadot is a website designed to sell clothes <br>
+                        and accessories online.
+                        </p>
+                        <button class="Project-btn">
+                            <a href="#">View</a>
+                        </button>
+                </div>
+                <div class="Project-Img">
+                    <div class="container">Project Image</div>
+                </div>
+
+                <div class="Project" id="Project2">
+                    <h1 class="Project-name">Zima</h1>
+                    <p> Zima is a rebranding project designed for <br>
+                        a website that sells flavored alcoholic beverages.
+                        </p>
+                        <button class="Project-btn">
+                            <a href="#">View</a>
+                        </button>
+                </div>
+                <div class="Project-Img">
+                    <div class="container">Project Image</div>
+                </div>
+
+                <div class="Project" id="Project3">
+                    <h1 class="Project-name">Hotel Room</h1>
+                    <p> In this project, a 3D hotel room is designed <br>
+                        with the help of cinema 4D software.
+                        </p>
+                        <button class="Project-btn">
+                            <a href="#">View</a>
+                        </button>
+                </div>
+                <div class="Project-Img">
+                    <div class="container">Project Image</div>
+                </div>
+
+            </div>
+
         </main>
 
     <!-- main library -->
